--- a/quiz/styles/globals.css
+++ b/quiz/styles/globals.css
@@ -212,8 +212,27 @@ canvas{
      
      }
 
+
+
     
   }
+
+
+
+  @media screen and (max-width: 1200px) {
+     
+    .hom{
+        font-size: 12px;
+        margin-top: 25px;
+        cursor: pointer;
+         font-weight: 500;
+      
+     
+     }
+
+    
+  }
+
 
 
   @media screen and (max-width: 600px) {
@@ -228,5 +247,11 @@ canvas{
     
     }
 
+    .select::after {
+      display: none;
+    }
+
+
+   
     
   }
